--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,25 +1,25 @@
-
-
 body{
     margin:0 ;
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(120deg , #2f5fff , #72b1fa);
+    background: linear-gradient(120deg , #000000 , #2f5fff);
     color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-attachment: fixed;
-    height: 1000px;
+    height: 1100px;
 }
 header{
     text-align: center;
     padding: 30px;
+    animation: surgir 2s ease-out forwards;
 }
 #foto{
     width: 180px;
     height: 180px;
     border-radius: 50%;
     border: 4px outset #fff;
+    animation: surgir 2s ease-out forwards;
 }
 header h1{
     margin: 15px;
@@ -28,6 +28,7 @@ header h1{
     font-family: "Cinzel Decorative", serif;
     font-weight: 700;
     font-style: normal;
+     text-shadow: 2px 2px 4px #000000;
 }
 header p{
     margin: 2px;
@@ -60,6 +61,29 @@ header a{
     height: auto;
     gap: 10px;
 }
+.sesi-senai{
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: 100px;
+}
+.logo img{
+    width: 70px;
+    height: 80px;
+}
+.logo{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: auto;
+    height: 60%;
+    margin-top: -25px;
+}
+#senai{
+    width: 80px;
+    height: 90px;
+    margin-top: -5px;
+}
 main{
     display: flex;
     flex-direction: column;
@@ -73,6 +97,7 @@ main{
     border-radius: 12px;
     padding: 20px;
     text-align: center;
+    box-shadow: inset;
     transition: transform 0.5s ease, background-color 0.3s ease;
 }
 .card:hover{
@@ -81,6 +106,7 @@ main{
 }
 .card h2{
     margin-bottom: 10px;
+    text-shadow: 2px 2px 4px #000000;
 }
 .cursos img{
     width: 300px;
@@ -127,6 +153,16 @@ main{
     background: linear-gradient(to right , green , rgb(24, 255, 24));
     color: white;
 }
+footer{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(120deg , #2f5fff , #72b1fa);
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+}
 #toggle-expansao {
       display: none;
     }
@@ -152,4 +188,49 @@ main{
       max-height: 500px; /* ajuste conforme o tamanho necessário */
       margin-top: 10px;
     }
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+.reveal {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.8s ease;
+}
+
+/* Quando aparece na tela */
+.reveal.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+@keyframes slideIn {
+        0% {
+            transform: translateX(-100%); /* Começa fora da tela */
+            opacity: 0;
+        }
+        100% {
+            transform: translateX(0); /* Entra na posição normal */
+            opacity: 1;
+        }
+    }
+@keyframes surgir {
+            0% {
+                opacity: 0;          /* Começa invisível */
+                transform: scale(0.8); /* Começa menor */
+            }
+            100% {
+                opacity: 1;          /* Fica totalmente visível */
+                transform: scale(1);  /* Volta ao tamanho original */
+            }
+        }
 
